--- a/css/about.css
+++ b/css/about.css
@@ -323,21 +323,21 @@
 
 
 
- .gallery {
+.gallery {
     --s: 130px;
-    display: grid !important;
-    grid-template-columns: repeat(3, auto) !important;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
     gap: 5px;
     position: relative;
     align-content: center;
-    justify-content: center !important;
-    align-items: baseline !important;
+    justify-content: center;
+    align-items: baseline;
     justify-items: center;
     margin: 2rem;
     margin-bottom: 2rem;
     padding: 1rem;
 }
-
+  
 .gallery input {
     position: absolute;
     border: 2px solid #1c1b1b;
@@ -347,34 +347,19 @@
     --g: linear-gradient(#181818 0 0) no-repeat;
     background: var(--g) 50%/var(--b,0%) 3px,var(--g) 50%/3px var(--b,0%);
     transition: 1.5s;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
+    -webkit-appearance: none; /* For modern browsers */
+    -moz-appearance: none; /* For Firefox */
+    appearance: none; /* For modern browsers */
 }
 
 /* Safari-specific styles */
-@supports (-webkit-appearance: none) {
-    .gallery {
-    position: absolute;
-    text-align: center; /* Center align the button */
-     --s: 130px;
-    display: grid !important;
-    grid-template-columns: repeat(3, auto) !important;
-    gap: 5px;
-    position: relative;
-    align-content: center;
-    justify-content: center !important;
-    align-items: baseline !important;
-    justify-items: center;
-    margin: 2rem;
-    margin-bottom: 2rem;
-    padding: 1rem;
-    border: 2px solid #1c1b1b;
-    border-radius: 50%;
-    }
-
-    .gallery button {
-        margin-top: 20px; /* Adjust the margin as needed */
+@supports not (-webkit-appearance: none) {
+    .gallery input {
+        position: static; /* Change position to static for Safari */
+        border: none; /* Remove border for Safari */
+        background-color: transparent; /* Make background transparent for Safari */
+        -webkit-appearance: button; /* Use button appearance for Safari */
+        appearance: button; /* Use button appearance for Safari */
     }
 }
 
