--- a/css/about.css
+++ b/css/about.css
@@ -323,7 +323,7 @@
 
 
 
-.gallery {
+  .gallery {
     --s: 130px;
     display: grid;
     grid-template-columns: repeat(3, auto);
@@ -337,8 +337,8 @@
     margin-bottom: 2rem;
     padding: 1rem;
 }
-
-.gallery input {
+  
+  .gallery input {
     position: absolute;
     border: 2px solid #1c1b1b;
     border-radius: 50%;
@@ -347,31 +347,10 @@
     --g: linear-gradient(#181818 0 0) no-repeat;
     background: var(--g) 50%/var(--b,0%) 3px,var(--g) 50%/3px var(--b,0%);
     transition: 1.5s;
-    -webkit-appearance: none; /* For modern browsers */
-    -moz-appearance: none; /* For Firefox */
-    appearance: none; /* For modern browsers */
-}
-
-/* Safari-specific styles */
-@supports not (-webkit-appearance: none) {
-    .gallery input {
-        position: static; /* Change position to static for Safari */
-        border: none; /* Remove border for Safari */
-        background-color: transparent; /* Make background transparent for Safari */
-        -webkit-appearance: button; /* Use button appearance for Safari */
-        appearance: button; /* Use button appearance for Safari */
-    }
-
-    .adjustable-button {
-        display: block;
-        margin: 20px auto; /* Adjust margin as needed */
-    }
-}
-
-
-
-
-
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+  }
 
 /* Img:hover */
   #myImg1:hover {
