--- a/css/style.css
+++ b/css/style.css
@@ -154,8 +154,16 @@ html{
     font-size: 4.5rem;
     color: var(--black);
     font-family:'Satisfy', cursive;
+    transition: color 0.3s; /* Smooth transition */
 
 }
+
+.header .logo a:hover {
+  color: green;
+}
+
+
+
 /*--------velikost pismen menu---------*/
 .header .nav__menu a {
     font-size: 3rem;
@@ -294,20 +302,6 @@ html{
     max-width: 650px;
     margin-inline: 1.5rem;
   }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -809,13 +803,18 @@ html{
 
     .header .nav__menu {
         position: absolute;
-        top:99%; left:0; right:0;
+        top:99%; 
+        /*left:0; */
+        right:0;
         background-color: var(--white);
         border-top: var(--border);
         padding: 2rem;
         transition: 0.4s linear;
         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        width: 60vw;
 
+        max-height: 80vh; /* Set maximum height */
+        overflow-y: auto; /* Enable vertical scrolling */
     }
 
     .header .nav__menu.active{
@@ -848,6 +847,8 @@ html{
     left: 0;
     z-index: -1;
   }
+  
+
   
   /* Active link */
   .active-link::after {
@@ -1363,79 +1364,114 @@ html{
     font-family: fantasy;
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .packages {
-    background: var(--light-bg);
+  background: var(--light-bg);
 }
 
 .packages .box-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-    gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 2rem;
+  padding: 2rem;
 }
 
 .packages .box-container .box {
-    border: var(--border);
-    box-shadow: var(--box-shadow);
-    background: var(--white);
-    display: none;
-    
+  border: var(--border);
+  box-shadow: var(--box-shadow);
+  background: var(--white);
+  display: none; /* Initially hide all boxes */
 }
 
-.packages .box-container .box:nth-child(1),
-.packages .box-container .box:nth-child(2),
-.packages .box-container .box:nth-child(3),
-.packages .box-container .box:nth-child(4),
-.packages .box-container .box:nth-child(5),
-.packages .box-container .box:nth-child(6){
-    display: inline-block;
+.packages .box-container .box:nth-child(-n+6) {
+  display: block; /* Show the first 6 boxes */
 }
-
-
-
 
 .packages .box-container .box .image {
-    height: 25rem;
-    overflow: hidden;
+  height: 25rem;
+  overflow: hidden;
 }
 
-.packages .box-container .box:hover .image img{
-    transform: scale(1.1);
- }
+.packages .box-container .box:hover .image img {
+  transform: scale(1.1);
+}
 
 .packages .box-container .box .image img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    transition: 0.2s linear;
-    
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  transition: 0.2s linear;
 }
 
 .packages .box-container .box .content {
-    padding: 2rem;
-    text-align: center;
+  padding: 2rem;
+  text-align: center;
 }
 
 .packages .box-container .box .content h3 {
-    font-size: 2.5rem;
-    color:var(--black);
+  font-size: 2.5rem;
+  color: var(--black);
 }
 
 .packages .box-container .box .content p {
-    color:var(--light-black);
-    line-height: 2;
-    padding: 1rem 0;
-    text-transform: capitalize; 
-
-    text-shadow: 1px 1px #f1f2f598;
-    font-size: large;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+  color: var(--light-black);
+  line-height: 2;
+  padding: 1rem 0;
+  text-transform: capitalize;
+  text-shadow: 1px 1px #f1f2f598;
+  font-size: large;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-.packages .load-more {
-    text-align: center;
-    margin-top: 2rem;
+.load-more {
+  text-align: center;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  align-content: center;
+  justify-content: center;
+
+  padding: 2rem;
 }
+
+.load-more .btn {
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: var(--black);
+  color: var(--white);
+  border: none;
+  border-radius: 5px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1487,6 +1523,160 @@ html{
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.checkbox-wrapper-5 .check {
+  --size: 40px;
+  position: relative;
+  background: linear-gradient(90deg, #f19af3, #f099b5);
+  line-height: 0;
+  perspective: 400px;
+  font-size: var(--size);
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"],
+  .checkbox-wrapper-5 .check label,
+  .checkbox-wrapper-5 .check label::before,
+  .checkbox-wrapper-5 .check label::after,
+  .checkbox-wrapper-5 .check {
+  appearance: none;
+  display: inline-block;
+  border-radius: var(--size);
+  border: 0;
+  transition: .35s ease-in-out;
+  box-sizing: border-box;
+  cursor: pointer;
+}
+
+.checkbox-wrapper-5 .check label {
+  width: calc(2.2 * var(--size));
+  height: var(--size);
+  background: #089284;
+  overflow: hidden;
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"] {
+  position: absolute;
+  z-index: 1;
+  width: calc(.8 * var(--size));
+  height: calc(.8 * var(--size));
+  top: calc(.1 * var(--size));
+  left: calc(.1 * var(--size));
+  background: linear-gradient(45deg, #dedede, #ffffff);
+  box-shadow: 0 6px 7px rgba(0,0,0,0.3);
+  outline: none;
+  margin: 0;
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked {
+  left: calc(1.3 * var(--size));
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked + label {
+  background: transparent;
+}
+
+.checkbox-wrapper-5 .check label::before,
+  .checkbox-wrapper-5 .check label::after {
+  content: "· ·";
+  position: absolute;
+  overflow: hidden;
+  left: calc(.15 * var(--size));
+  top: calc(.5 * var(--size));
+  height: var(--size);
+  letter-spacing: calc(-0.04 * var(--size));
+  color: #9b9b9b;
+  font-family: "Times New Roman", serif;
+  z-index: 2;
+  font-size: calc(.6 * var(--size));
+  border-radius: 0;
+  transform-origin: 0 0 calc(-0.5 * var(--size));
+  backface-visibility: hidden;
+}
+
+.checkbox-wrapper-5 .check label::after {
+  content: "●";
+  top: calc(.65 * var(--size));
+  left: calc(.2 * var(--size));
+  height: calc(.1 * var(--size));
+  width: calc(.35 * var(--size));
+  font-size: calc(.2 * var(--size));
+  transform-origin: 0 0 calc(-0.4 * var(--size));
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked + label::before,
+  .checkbox-wrapper-5 .check input[type="checkbox"]:checked + label::after {
+  left: calc(1.55 * var(--size));
+  top: calc(.4 * var(--size));
+  line-height: calc(.1 * var(--size));
+  transform: rotateY(360deg);
+}
+
+.checkbox-wrapper-5 .check input[type="checkbox"]:checked + label::after {
+  height: calc(.16 * var(--size));
+  top: calc(.55 * var(--size));
+  left: calc(1.6 * var(--size));
+  font-size: calc(.6 * var(--size));
+  line-height: 0;
+}
+
+
+
+
+.checkbox-wrapper-5 .check .bubble {
+  
+  position: absolute;
+  top: -3px; /* Adjust as needed */
+  left: -10rem;
+  transform: translateX(-50%);
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 14px 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  visibility: hidden; /* Initially hidden */
+  opacity: 0; /* Initially transparent */
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+  color: #020606;
+  letter-spacing: 2px; /* Add space between letters */
+
+}
+
+.checkbox-wrapper-5 .check:hover .bubble {
+  visibility: visible; /* Show the bubble on hover */
+  opacity: 1;
+}
 
 
 
