--- a/css/style.css
+++ b/css/style.css
@@ -1878,6 +1878,15 @@ html{
     max-width: 90%; /* Adjust max-width for smaller screens */
 }
 
+
+        .heading h1 {
+    font-size: 12vw;
+    padding-top: 35px;
+    text-align: center;
+
+}
+
+
    }
 
    @media (max-width: 600px) {
