--- a/css/cloud.css
+++ b/css/cloud.css
@@ -43,7 +43,7 @@ header {
     position: relative;
 }
 
-.cloud {
+.cloud99 {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -54,7 +54,7 @@ header {
     align-items: flex-end; /* Align clouds to the bottom */
 }
 
-.cloud img {
+.cloud99 img {
     animation: cld calc(8s * var(--i)) linear infinite;
     opacity: 0.6;
     position: absolute;
