--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap');
 
 
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&display=swap');
+
+
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap');
 
 
 
@@ -16,8 +21,9 @@
     --border:.1rem solid var(--black);
     --box-shadow:0 .5rem 1rem rgba(0,0,0,.1);
     --text-shadow:0 1.5rem 3rem rgba(0,0,0,.3);
-    --first_font:'Satisfy', cursive;
-    --second_font:font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+    --first_font: "Amatic SC", sans-serif;
+    --second_font: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif !important;
+    --third_font: "Amatic SC", sans-serif;
  }
 
 * {
@@ -45,7 +51,10 @@ html{
  html::-webkit-scrollbar-thumb{
     background-color: var(--main-color);
  }
- 
+
+
+
+
 
  section{
     padding:5rem 10%;
@@ -104,7 +113,7 @@ html{
     font-size: 1.7rem;
     padding: 1rem 3rem;
     cursor: pointer;
-    font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
+    font-family: fantasy, Kalam, "sans-serif";
     text-transform: uppercase;
 }
 
@@ -116,9 +125,8 @@ html{
     font-size: 1.7rem;
     padding: 1rem 3rem;
     cursor: pointer;
-    font-family: fantasy;
+    font-family: fantasy, "Kalam", "sans-serif";
     text-transform: uppercase;
-
 }
 
 .btn:hover{
@@ -158,8 +166,11 @@ html{
 .header .logo {
     font-size: 4.5rem;
     color: var(--black);
-    font-family:'Satisfy', cursive;
+    font-family: var(--first_font);
     transition: color 0.3s; /* Smooth transition */
+
+    font-weight: 700;
+    font-style: normal;
 
 }
 
@@ -367,9 +378,18 @@ html{
     margin: 2rem;
     margin-right: 1rem;
     padding: 1rem;
+    
+    text-transform: none;
     text-shadow: 1px 1px #f1f2f598;
-    font-size: large;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border-bottom: 1px solid #ddd;
+    font-size: 2.5rem;
+    transition: all 0.2s linear;
+    padding-right: 1rem;
+    line-height: 2;
+    color: var(--black);
+    font-family: var(--third_font);
+    font-weight: 700;
+    font-style: normal;
 }
 
 
@@ -458,7 +478,7 @@ html{
 /*--------animace fadeIn nadpisu---------*/
 .home .slide .content span{
     display: block;
-    font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
+    font-family: fantasy, Kalam, "sans-serif";
     font-size: 2.5rem;
     color: rgb(255, 255, 255);
     text-shadow: var(--text-shadow);
@@ -559,9 +579,17 @@ html{
 .home_ul li {
   padding: 8px;
   border-bottom: 1px solid #ddd;
-  font-size: large;
+  font-size: 2.5rem;
   transition: all 0.2s linear;
   padding-right: 1rem;
+
+
+  line-height: 2;
+  color: var(--black);
+  font-family: var(--first_font);
+
+  font-weight: 700;
+  font-style: normal;
 }
 
 .home_ul li:hover {
@@ -666,12 +694,17 @@ html{
 }
 
 .home-about .content p {
-    font-size: 2rem;
+    font-size: 3rem;
     padding: 1rem 0;
     line-height: 2;
     color: var(--black);
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: var(--first_font);
     text-shadow: 1px 1px #0a0a0af6;
+
+    font-weight: 700;
+    font-style: normal;
+
+
 }
 
 .home-packages {
@@ -723,10 +756,20 @@ html{
   color: var(--light-black);
   line-height: 2;
   padding: 1rem 0;
-  text-transform: capitalize;
   text-shadow: 1px 1px #f1f2f598;
-  font-size: large;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+  border-bottom: 1px solid #ddd;
+  font-size: 2.5rem;
+  transition: all 0.2s linear;
+  padding-right: 1rem;
+
+
+  line-height: 2;
+  color: var(--black);
+  font-family: var(--first_font);
+
+  font-weight: 700;
+  font-style: normal;
 }
 
 
@@ -785,21 +828,29 @@ html{
 }
 
 .about .content h3 {
-    font-size: 3rem;
+    font-size: 3.5rem;
     color: var(--black);
-    font-family: var(--first_font);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .about .content p {
-    font-size: 2rem;
-    color: var(--light-black);
-    line-height: 2;
-    padding: 1rem;
-    text-shadow: 1px 1px #0a0a0af6;
+  color: var(--light-black);
+  line-height: 2;
+  padding: 1rem 0;
+  text-shadow: 1px 1px #f1f2f598;
+
+  border-bottom: 1px solid #ddd;
+  font-size: 2.5rem;
+  transition: all 0.2s linear;
+  padding-right: 1rem;
 
 
-    font-size: large;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  line-height: 2;
+  color: var(--black);
+  font-family: var(--third_font);
+
+  font-weight: 700;
+  font-style: normal;
 }
 
 
@@ -1012,6 +1063,9 @@ padding-top: 6rem;
     border-color: aliceblue;
     box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
     border-bottom: 3px solid #ddd;
+
+    background-color: #fff;
+
 }
 
 .nav__menu ul li:hover .dropdown__menu ul li:hover {
@@ -1112,6 +1166,23 @@ padding-top: 6rem;
     padding-right: 5%;
 
     }
+
+
+    @media (max-width: 700px){
+   
+      .map-responsive iframe{
+        width: 350px;
+        height: 350px;
+    
+        }
+  
+      }
+
+
+
+
+
+
 
 
 
@@ -1354,8 +1425,16 @@ padding-top: 6rem;
         line-height: 2;
         padding: 1rem;
         }
+
+        .map-responsive iframe{
+          width: 200px;
+          height: 200px;
+      
+          }
     }  
 
+
+  
 
 
 
@@ -1404,12 +1483,12 @@ padding-top: 6rem;
   border-top: 0.1rem solid var(--light-white);
   font-size: 2rem;
   color: var(--white);
-  font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
+  font-family: fantasy, Kalam, "sans-serif";
 }
 
 .footer .credit span {
     color: var(--main-color);
-    font-family: fantasy, "Comic Sans MS", "Papyrus", cursive, sans-serif;
+    font-family: fantasy, Kalam, "sans-serif";
   }
 
 
@@ -1476,12 +1555,18 @@ padding-top: 6rem;
 
 .packages .box-container .box .content p {
   color: var(--light-black);
-  line-height: 2;
-  padding: 1rem 0;
-  text-transform: capitalize;
-  text-shadow: 1px 1px #f1f2f598;
-  font-size: large;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    line-height: 2;
+    padding: 1rem 0;
+    text-shadow: 1px 1px #f1f2f598;
+    border-bottom: 1px solid #ddd;
+    font-size: 2.5rem;
+    transition: all 0.2s linear;
+    padding-right: 1rem;
+    line-height: 2;
+    color: var(--black);
+    font-family: var(--first_font);
+    font-weight: 700;
+    font-style: normal;
 }
 
 .load-more {
@@ -2053,6 +2138,30 @@ svg {
 
 
 
+.text-under-toggle {
+  position: absolute;
+  bottom: 2rem; /* Adjust the value to position the text properly */
+  right: 5%;
+  transform: translateX(-5%);
+  
+  text-shadow: 1px 1px #f1f2f598;
+    border-bottom: 1px solid #ddd;
+    font-size: 4.5rem;
+    padding-right: 1rem;
+    line-height: 2;
+    color: var(--black);
+    font-family: var(--third_font);
+    font-weight: 700;
+    font-style: normal;
+
+
+
+
+
+}
+
+
+
 
 
 
@@ -2608,6 +2717,7 @@ input{
     /*--hamburger- menu pri zmene velikosti okna na 768px---------*/
    @media (max-width: 768px){
    
+    
     .about__data .section__title {
       text-align: initial;
     }
