--- a/css/style.css
+++ b/css/style.css
@@ -687,9 +687,12 @@ html{
 /*--------text ---------*/
 .service .box-container .box h3 {
     color: var(--white);
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     padding-top: 1rem; 
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: var(--sixt_font);
+
+    font-weight: 700;
+  font-style: normal;
 }
 
 /*--------dulezite flex dohromady s align-items ---------*/
