--- a/css/about.css
+++ b/css/about.css
@@ -342,15 +342,18 @@
     position: absolute;
     border: 2px solid #1c1b1b;
     border-radius: 50%;
-    inset: calc(50% - var(--s)/3);
+    inset: calc(50% - var(--s) / 3);
     cursor: pointer;
-    --g: linear-gradient(#181818 0 0) no-repeat;
-    background: var(--g) 50%/var(--b,0%) 3px,var(--g) 50%/3px var(--b,0%);
-    transition: 1.5s;
-    -webkit-appearance: none;
-    -moz-appearance: none;
+    background: linear-gradient(#181818 0 0) no-repeat 50%/var(--b, 0%) 3px,
+                linear-gradient(#181818 0 0) no-repeat 50%/3px var(--b, 0%);
+    transition: background 1.5s, transform 1.5s;
     appearance: none;
-  }
+}
+
+.gallery input:checked {
+    transform: translateY(calc(1.75 * var(--s))) scale(0.5) rotate(225deg);
+    --b: 70%;
+}
 
 /* Img:hover */
   #myImg1:hover {
