--- a/css/about.css
+++ b/css/about.css
@@ -342,18 +342,15 @@
     position: absolute;
     border: 2px solid #1c1b1b;
     border-radius: 50%;
-    inset: calc(50% - var(--s) / 3);
+    inset: calc(50% - var(--s)/3);
     cursor: pointer;
-    background: linear-gradient(#181818 0 0) no-repeat 50%/var(--b, 0%) 3px,
-                linear-gradient(#181818 0 0) no-repeat 50%/3px var(--b, 0%);
-    transition: background 1.5s, transform 1.5s;
+    --g: linear-gradient(#181818 0 0) no-repeat;
+    background: var(--g) 50%/var(--b,0%) 3px,var(--g) 50%/3px var(--b,0%);
+    transition: 1.5s;
+    -webkit-appearance: none;
+    -moz-appearance: none;
     appearance: none;
-}
-
-.gallery input:checked {
-    transform: translateY(calc(1.75 * var(--s))) scale(0.5) rotate(225deg);
-    --b: 70%;
-}
+  }
 
 /* Img:hover */
   #myImg1:hover {
@@ -386,11 +383,12 @@
   left: 0%;
   top: 0;
   width: 100%; /* Full width */
-  height: 100%; /* Full height */
+ /* height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 
+  margin-top: 200px;
 }
 
 /* Modal Content (image) */
