--- a/css/about.css
+++ b/css/about.css
@@ -342,23 +342,24 @@
     position: absolute;
     border: 2px solid #1c1b1b;
     border-radius: 50%;
-    inset: calc(50% - var(--s)/3);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     cursor: pointer;
     --g: linear-gradient(#181818 0 0) no-repeat;
     background: var(--g) 50%/var(--b,0%) 3px, var(--g) 50%/3px var(--b,0%);
     transition: 1.5s;
-    -webkit-appearance: none; /* Ensure no default styles from Safari */
-    -moz-appearance: none; /* Ensure no default styles from Firefox */
-    appearance: none; /* Ensure no default styles from other browsers */
+    -webkit-appearance: none; /* Remove default Safari styles */
+    -moz-appearance: none; /* Remove default Firefox styles */
+    appearance: none; /* Remove default styles for other browsers */
     outline: none; /* Remove outline on focus */
 }
 
-/* Vendor prefix for Safari */
-@supports (-webkit-appearance: none) {
-    .gallery input {
-        -webkit-appearance: none;
-    }
-}
+
+
+
+
+
 /* Img:hover */
   #myImg1:hover {
     opacity: 0.9;
