--- a/css/about.css
+++ b/css/about.css
@@ -398,7 +398,8 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
-
+  margin-left: 3rem;
+  margin-right: 3rem;
   margin-top: 200px;
 }
 
