--- a/css/css/style.css
+++ b/css/css/style.css
@@ -1082,20 +1082,21 @@ html{
 
 
 .map h1 {
-    font-size: 3rem;
-    color: var(--black);   
     margin-bottom: 4rem;
     font-weight: bold;
     top: 3rem;
     left: 3rem;
-    text-transform: capitalize;
     position: relative;
     display: flex;
     align-items:center;
     text-align: center;
     margin-top: 3rem;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-
+    font-size: 3.5rem;
+    color: var(--black);
+    font-family: var(--sixt_font);
+    font-weight: 400;
+    font-style: normal;
+    text-transform: uppercase;
 
 }
 
